...
    func endGame(correctAnswers: Int, viewController: MovieQuizViewControllerProtocol) {
        
        guard let statisticService else { return }
        
        statisticService.store(correct: correctAnswers, total: questionsAmount)
        
        let alertModel = AlertModel(title: "Этот раунд окончен!",
                                    message: """
                                            Ваш результат: \(correctAnswers)/\(questionsAmount)
                                            Количество сыгранных квизов: \(statisticService.gamesCount)
                                            Рекорд: \(statisticService.bestGame.correct)/\(statisticService.bestGame.total) (\(statisticService.bestGame.date.dateTimeString))
                                            Средняя точность: \(String(format: "%.2f", statisticService.totalAccuracy))%
                                            """,
                                    buttonText: "Сыграть ещё раз") { [weak self] in
            self?.restartGame()
        }
        
        let alertPresenter = AlertPresenter(alertModel: alertModel)
        guard let viewController = viewController as? UIViewController else { return }
        alertPresenter.showAlert(viewController: viewController)
...
